--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,18 @@
-fastapi>=0.95.0
-uvicorn>=0.21.0
-sqlalchemy>=2.0.0
-pydantic>=1.10.0
-python-dotenv>=0.21.0
-asyncpg
+annotated-types==0.7.0
+anyio==4.9.0
+asyncpg==0.30.0
+click==8.1.8
+fastapi==0.115.12
+greenlet==3.2.0
+h11==0.14.0
+idna==3.10
+pydantic==2.11.3
+pydantic_core==2.33.1
+python-dotenv==1.1.0
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+starlette==0.46.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+uvicorn==0.34.1
+websockets==15.0.1
