--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,12 @@
-alembic==1.15.2
-annotated-types==0.7.0
-anyio==4.9.0
-asyncpg==0.30.0
-click==8.1.8
-colorama==0.4.6
-fastapi==0.115.12
-greenlet==3.2.0
-h11==0.14.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+faiss-cpu==1.10.0
 idna==3.10
-Mako==1.3.10
-MarkupSafe==3.0.2
-pydantic==2.11.3
-pydantic_core==2.33.1
+numpy==2.2.5
+packaging==25.0
+PyPDF2==3.0.1
+requests==2.32.3
+urllib3==2.4.0
 python-dotenv==1.1.0
-sniffio==1.3.1
-SQLAlchemy==2.0.40
-starlette==0.46.2
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-uvicorn==0.34.2
-websockets==15.0.1
+alembic==1.15.2
+asyncpg==0.30.0
