--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -3,19 +3,68 @@ anyio==4.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+dotenv==0.9.9
 faiss-cpu==1.10.0
 fastapi==0.115.12
+filelock==3.18.0
+fsspec==2025.3.2
+greenlet==3.2.0
 h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
+huggingface-hub==0.30.2
 idna==3.10
+Jinja2==3.1.6
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.23
+langchain-core==0.3.54
+langchain-text-splitters==0.3.8
+langsmith==0.3.32
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
 numpy==2.2.5
-packaging==25.0
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+orjson==3.10.16
+packaging==24.2
 pydantic==2.11.3
 pydantic_core==2.33.1
 python-dotenv==1.1.0
+PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
+requests-toolbelt==1.0.0
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+setuptools==79.0.0
 sniffio==1.3.1
+SQLAlchemy==2.0.40
 starlette==0.46.2
+sympy==1.13.1
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.6.0
+tqdm==4.67.1
+transformers==4.51.3
+triton==3.2.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
 uvicorn==0.34.2
+zstandard==0.23.0
