--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -42,6 +42,7 @@ nvidia-nvtx-cu12==12.4.127
 orjson==3.10.16
 packaging==24.2
 pydantic==2.11.3
+pydantic-settings==2.9.1
 pydantic_core==2.33.1
 python-dotenv==1.1.0
 PyYAML==6.0.2
